Ayuda a usuario actualizada. Roles y permisos.

--- a/src/escuela/templates/clases-form.html
+++ b/src/escuela/templates/clases-form.html
@@ -36,7 +36,7 @@
 <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nueva Clase</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;"> Cargar el nombre de la clase y la descripción, ambos campos son <strong>obligatorios</strong>.</p>
+<p style="text-align: center;"><span style="font-size: 14pt;"> Cargar el nombre de la clase y la descripción, ambos campos son <strong>obligatorios</strong>.</span></p>
     <p style="text-align: center;">&nbsp;</p>
         <img src="/static/img/pasos_nueva_clase.gif" alt="pasos_nueva_clase" width="800"  style="display: block;
     margin-left: auto;
