--- a/src/escuela/templates/inscripciones-bajas.html
+++ b/src/escuela/templates/inscripciones-bajas.html
@@ -110,7 +110,7 @@
 <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Baja de Inscripciones</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar todas las <strong>Inscripciones</strong> activas "A" e inactivas "I".</p>
+<p style="text-align: center;"><span style="font-size: 14pt;">Podr&aacute; visualizar todas las <strong>Inscripciones</strong> activas "A" e inactivas "I".</span></p>
     <p style="text-align: center;">&nbsp;</p>
         <img src="/static/img/pasos_baja_inscripcion.gif" alt="pasos_baja_inscripcion" width="800"  style="display: block;
     margin-left: auto;
