--- a/src/escuela/templates/inscripciones-inactivas.html
+++ b/src/escuela/templates/inscripciones-inactivas.html
@@ -106,9 +106,25 @@
 <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Inscripciones</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-    <p style="text-align: center;">Muestra el listado de los alumnos inscriptos esten <strong>Activos ("A") o Inactivos ("I")</strong> </strong>&nbsp;</p>
     <p style="text-align: center;">&nbsp;</p>
+        <img src="/static/img/pasos_consulta_inscripcion.gif" alt="pasos_consulta_inscripcion" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br><br>
 
-        <p>&bull; <strong>Si desea realizar una Inscripci&oacute;n Nueva , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
+        <hr>
+        <p><span style="color: #003366;"><strong>Opcion 1. Lista de inscripciones :&nbsp;Se puede ver la lista de todos los alumnos inscriptos.</strong></span></p>
+        <p>&bull; <strong><em>Alumnos inactivos <strong>"In"</strong> son los que culminaron algún curso pero no volvieron a inscribirse.</em></strong></br></p>
 
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 2. : Filtrar la cantidad de alumnos en la pantalla.</strong></span></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Buscar alumno <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Nombre, Apellido, Grupo o Fecha). </em></strong></p>
+
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Para realizar una nueva inscripción, dar clic a
+            <img src="/static/img/nueva_inscripcion.png" alt="icono_nuevoalumno" /></strong></span></p>
 {% endblock %}
