--- a/src/main/templates/main/alumnos.html
+++ b/src/main/templates/main/alumnos.html
@@ -118,7 +118,7 @@
 <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Alumnos</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Alumnos</strong> con sus datos, además de poder agregar nuevos.</p>
+<p style="text-align: center;"><span style="font-size: 14pt;">Podr&aacute; visualizar a todos los <strong>Alumnos</strong> con sus datos, además de poder agregar nuevos.</span></p>
     <p style="text-align: center;">&nbsp;</p>
         <img src="/static/img/pasos_alumnolista.gif" alt="pasos_alumnolista" width="800"  style="display: block;
     margin-left: auto;
