--- a/src/main/templates/main/titulares-form.html
+++ b/src/main/templates/main/titulares-form.html
@@ -54,7 +54,7 @@
 <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Titular</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-<p style="text-align: center;"> Cargar los datos del titular, según sean <strong>obligatorio u opcionales</strong>.</p>
+<p style="text-align: center;"><span style="font-size: 14pt;"> Cargar los datos del titular, según sean <strong>obligatorio u opcionales</strong>.</span></p>
     <p style="text-align: center;">&nbsp;</p>
         <img src="/static/img/pasos_nuevo_titular.gif" alt="pasos_nuevo_titular" width="800"  style="display: block;
     margin-left: auto;
