--- a/src/tienda/templates/producto-form.html
+++ b/src/tienda/templates/producto-form.html
@@ -57,7 +57,7 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Prodcuto</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Nuevo Producto</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
 <p style="text-align: center;"> <span style="font-size: 12pt;">Cargar campos del productos, según sean <strong>obligatorio u opcionales</strong>.</span></p>
