--- a/src/tienda/templates/producto.html
+++ b/src/tienda/templates/producto.html
@@ -145,7 +145,7 @@
         <p><br /><span style="color: #003366;"><strong>2. Acciones que podemos realizar sobre cada registro de producto.</strong></span></p>
         <p> <br /><span style="color: #003366;"><strong>&bull; Editar producto : <img src="/static/img/editar.png" alt="editar" /></strong></span></p>
         <p> <br /><span style="color: #003366;"><strong>&bull; Eliminar producto : <img src="/static/img/eliminar.png" alt="eliminar" /></strong></span></p>
-        <p>&bull; <strong><em>El registro del prodcuto sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
+        <p>&bull; <strong><em>El registro del producto sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
     <hr>
         <p><br /><span style="color: #003366;"><strong>3. Buscar producto <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
         <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Nombre, Descripción, Precio, IVA, Existencia). </em></strong></p>
@@ -157,4 +157,6 @@
     <hr>
         <p><br /><span style="color: #003366;"><strong>5.  Para crear nuevo producto, haga clic en el ícono <img src="/static/img/nuevo_producto.png" alt="nuevo_producto" /></strong></span></p>
         <p>&bull; <strong><em>Una vez creado el registro de nuevo producto, este se encontrará en la lista. </em></strong></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>6.  Para obtener informe de lista de productos, haga clic en el ícono <img src="/static/img/informe_excel.png" alt="informe_excel" /></strong></span></p>
 {% endblock %}
