--- a/src/tienda/templates/ventas-form.html
+++ b/src/tienda/templates/ventas-form.html
@@ -178,7 +178,7 @@
         <p> <br /><span style="color: #003366;">&bull; O sacar campos de la descripción antes de generar la factura.</span></p><br>
         <p>&bull; <strong><em>El monto total, subtotales, total IVA 5%, total IVA 10%, son calculados y generados de forma automática.</em></strong>.</strong></p>
         <hr>
-        <br><span style="color: #003366;"><strong>8. Cancelar o Pagar. </strong></span></strong></span></p>
+        <p style="text-align: center;"> <span style="font-size: 12pt;"><strong>Acciones  : </strong></span></p>
 
         <p> <br /><span style="color: #003366;"><strong>&bull; Para generar la factura presione : <img src="/static/img/icono_pagar.png" alt="icono_pagar" /></strong></span></p>
         <p> <br /><span style="color: #003366;"><strong>&bull; Si no desea generar la factura presione : <img src="/static/img/cancelar.png" alt="cancelar" /></strong></span></p>
