--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -56,7 +56,10 @@
                         <li><a href="/escuela/cuentas">Cuentas a cobrar</a></li>
                         <li><a href="/tienda/clientes">Clientes</a></li>
                         <li><a href="/tienda/productos">Productos</a></li>
-                        <li><a href="/tienda/facturas">Talonario Factura </a></li>
+                        {% if perms.tienda.factura_list %}
+                            <li><a href="/tienda/facturas">Talonario Factura </a></li>
+                        {% endif %}
+
                         {#                        <li><a href="">mantenimiento de clientes</a></li>#}
                     </ul>
                 </li>
@@ -78,7 +81,9 @@
                     <ul class="nav child_menu">
                         <li><a href="/reportes/grupo/alumnos">Alumnos por Grupo</a></li>
                         <li><a href="/reportes/asistencia">Asistencia Mensual </a></li>
-                        <li><a href="/reportes/balance">Balance Mensual</a></li>
+                        {% if perms.reporte.balance %}
+                            <li><a href="/reportes/balance">Balance Mensual</a></li>
+                        {% endif %}
                         <li><a href="/reportes/compra">Libro Compra</a></li>
                         <li><a href="/reportes/venta">Libro Venta</a></li>
                         <li><a href="/reportes/pagos/tarjetas">Cobros con Tarjeta</a></li>
@@ -87,7 +92,9 @@
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ajustes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/admin/auth/user/">Usuarios</a></li>
+                        {% if perms %}
+                            <li><a href="/admin/auth/user/">Usuarios</a></li>
+                        {% endif %}
                         <li><a href="/admin/auth/group/">Roles</a></li>
                         <li><a href="/admin/easyaudit/crudevent/">Auditoría</a></li>
 
