--- a/src/tienda/templates/compras.html
+++ b/src/tienda/templates/compras.html
@@ -129,16 +129,26 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Ingresos</span></strong></span></p>
+<p style="text-align: center;"><br /><span style="font-size: 16pt;"><strong><span style="color: #003366;">Lista de Egresos</span></strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-        <p style="text-align: center;">Se puede visualizar las operaciones realizadas. Siga los siguientes pasos para realizar una nueva operaci&oacute;n:&nbsp; </p>
-        <p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><span style="font-size: 14pt;">Podr&aacute; visualizar a todos los <strong>Egresos</strong> por fecha ingresada, además de poder agregar nuevos.</p>
+    <p style="text-align: center;">&nbsp;</p>
+        <img src="/static/img/pasos_compraslista.gif" alt="pasos_compraslista" width="800"  style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+   "/>
+        <br>
+        <hr>
+        <p><span style="color: #003366;"><strong>1. Fecha de compras :&nbsp;puede ser del día o fecha anterior. </strong></span></p>
+    <hr>
+        <p><span style="color: #003366;"><strong>2. Lista de compras :&nbsp;Se puede ver la lista de todas las compras realizadas en la fecha ingresada. </strong></span></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>3. Buscar compra <img src="/static/img/busqueda.png" alt="busqueda" /></strong></span></p>
+        <p>&bull; <strong><em>Puede buscar por cualquiera de lo campos (Nro de Factura, Proveedor, Descripción). </em></strong></p>
 
-        p><strong>Presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
-        <p><span style="color: #003366;"><strong>Paso 1. Llenar el formulario de Egresos : </strong></span></p>
-        <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em> Fecha, RUC, Proveedor, Descripci&oacute;n,
-            IVA 10%, IVA 5%, Monto Total</p>
-       <!-- <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula, Tipo Responsable</p>-->
-        <p><span style="color: #003366;"><strong>Paso 2. Guardar la operacion realizada <img src="/static/img/guardar.png" alt="guardar" /> </strong></span></p>
+    <hr>
+        <p><br /><span style="color: #003366;"><strong>4.  Nuevo Egreso, haga clic en el icono <img src="/static/img/nuevo_egreso.png" alt="nuevo_egreso" /></strong></span></p>
+        <p>&bull; <strong><em>Una vez creado nuevo egreso, este se encontrará en la lista. </em></strong></p>
 {% endblock %}
+
