--- a/src/main/templates/main/cuentas.html
+++ b/src/main/templates/main/cuentas.html
@@ -93,7 +93,7 @@
     </div>
     <script>
         function formEliminar(id){
-            $('#eliminar-form').attr('action', '/cuentas/delete/' + id);
+            $('#eliminar-form').attr('action', '/escuela/cuentas/' + id + '/delete' );
         }
     </script>
 {% endblock %}
