--- a/src/escuela/templates/cuentas.html
+++ b/src/escuela/templates/cuentas.html
@@ -77,10 +77,10 @@
 
                                     <td><a class="btn btn-info btn-xs" href="/escuela/cuentas/{{ cuenta.id }}/update">Editar </a>
 
-{#                                        <a button class="btn btn-danger btn-xs" data-toggle="modal"#}
-{#                                           data-target="#eliminar-modal" onclick="formEliminar({{ cuenta.id }})">Eliminar</a></td>#}
+                                     <a button class="btn btn-danger btn-xs" data-toggle="modal"
+                                           data-target="#eliminar-modal" onclick="formEliminar({{ cuenta.id }})">Eliminar</a></td>
                                 </tr>
-                                </tr>
+
                             {% endfor %}
 
                             </tbody>
