Venta a Crédito por rango de fecha

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -72,6 +72,7 @@
                         <li><a href="/tienda/ventas">Ventas Diarias</a></li>
                         <li><a href="/tienda/ventas/canceladas">Ventas canceladas Diarias</a></li>
                         <li><a href="/tienda/ventas/fechas">Ventas por rango de fechas</a></li>
+                        <li><a href="/tienda/ventas/credito/fechas">Ventas a Crédito por rango de fechas</a></li>
                         <li><a href="/tienda/estado_cuenta">Estado de cuenta</a></li>
 
                     </ul>
