Recibos por rango de fecha
- Tambien mejora otros reportes

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -74,6 +74,7 @@
                         <li><a href="/tienda/ventas/fechas">Ventas por rango de fechas</a></li>
                         <li><a href="/tienda/ventas/credito/fechas">Ventas a Crédito por rango de fechas</a></li>
                         <li><a href="/tienda/estado_cuenta">Estado de cuenta</a></li>
+                        <li><a href="/tienda/recibos/fechas">Recibos por rango de fechas</a></li>
 
                     </ul>
                 </li>
