--- a/src/tienda/templates/estado_cuenta.html
+++ b/src/tienda/templates/estado_cuenta.html
@@ -34,6 +34,8 @@
 
                             <label for="ver" class="btn btn-primary"><i class="fa fa-search"></i> Ver</label>
                             <input id="ver" type="submit" name="action" class="hidden" value="Ver">
+                            <label for="excel" class="btn btn-success"><i class="fa fa-download"></i> CSV</label>
+                            <input id="excel" type="submit" name="action" class="hidden" value="Excel">
                     </form>
                     <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap">
                         <thead>
