--- a/src/tienda/templates/ventas-credito-rango-fecha.html
+++ b/src/tienda/templates/ventas-credito-rango-fecha.html
@@ -35,7 +35,10 @@
                                 <option value="P" {% if estado == 'P' %}selected{% endif %}>Pendiente</option>
 {#                                <option value="IN" >Cancelado</option>#}
                             </select>
-                            <input class="btn btn-primary" type="submit" value="Ver">
+                            <label for="ver" class="btn btn-primary"><i class="fa fa-search"></i> Ver</label>
+                            <input id="ver" type="submit" name="action" class="hidden" value="Ver">
+                            <label for="excel" class="btn btn-success"><i class="fa fa-download"></i> CSV</label>
+                            <input id="excel" type="submit" name="action" class="hidden" value="Excel">
 
                             <br>
                         </form>
